--- a/src/views/client/mixins/sub-menu.pug
+++ b/src/views/client/mixins/sub-menu.pug
@@ -1,7 +1,7 @@
 mixin sub-menu(items, path)
     ul
         each item in items
-            li
+            li.account-menu.d-flex.align-items-center
                 a(href=`${path}/${item.slug}`) #{item.title}
                 if item.children && item.children.length > 0
                     +sub-menu(item.children, path)
