up forgot password client

--- a/src/views/client/pages/account/login.pug
+++ b/src/views/client/pages/account/login.pug
@@ -41,7 +41,9 @@ block main
                             // Error message placeholder
                             p#passwordError.text-danger.d-none Mật khẩu && tài khoản không khớp!
 
-                            button.btn.btn-primary.btn-block.w-100(type="submit") Đăng nhập
+                            button.btn.btn-primary.btn-block.w-100.mb-3(type="submit") Đăng nhập
+
+                            a(href="/account/password/forgot" class="text-decoration-none") Quên mặt khẩu
 
                         p.text-center.mt-3
                             | Bạn chưa có tài khoản?
