--- a/src/views/client/pages/account/register.pug
+++ b/src/views/client/pages/account/register.pug
@@ -51,7 +51,9 @@ block main
                             // Error message placeholder
                             p#passwordError.text-danger.d-none Mật khẩu không khớp!
 
-                            button.btn.btn-primary.btn-block.w-100(type="submit") Đăng Ký
+                            button.btn.btn-primary.btn-block.w-100.mb-3(type="submit") Đăng Ký
+
+                            a(href="/account/password/forgot" class="text-decoration-none") Quên mặt khẩu
 
                         p.text-center.mt-3
                             | Bạn đã có tài khoản?
