up nodemailer, forgot password client

--- a/src/views/client/pages/account/otp-password.pug
+++ b/src/views/client/pages/account/otp-password.pug
@@ -13,24 +13,31 @@ block main
             .col-md-6
                 .card.shadow-sm
                     .card-body
-                        h2.card-title.text-center Bạn quên mật khẩu?
+                        h1.card-title.text-center Nhập mã OTP để xác nhận
 
-                        p.card-text.text-center.mb-4
-                            | Nhập địa chỉ email của bạn và chúng tôi sẽ gửi cho bạn một liên kết để đặt lại mật khẩu của bạn.
-
-                        form(action="/account/password/forgot" method="POST" class="needs-validation")
+                        form(action="/account/password/otp" method="POST" class="needs-validation")
                             .form-group
                                 label(for="email") Email:
                                 input(
                                     type="email"
                                     name="email"
                                     id="email"
-                                    class="form-control"
+                                    class="form-control mb-2"
                                     placeholder="Nhập email của bạn"
+                                    value=email
+                                    required
+                                )
+                                label(for="otp") Mã OTP:
+                                input(
+                                    type="text"
+                                    name="otp"
+                                    id="otp"
+                                    class="form-control"
+                                    placeholder="Nhập mã OTP"
                                     required
                                 )
 
-                            button(type="submit" class="btn btn-primary btn-block mt-3 w-100") Gửi
+                            button(type="submit" class="btn btn-primary btn-block mt-3 w-100") Xác nhận
 
                         p.card-text.text-center.mt-3
                             a(href="/account/login" class="text-decoration-none") Trở về trang đăng nhập
