--- a/src/views/client/pages/account/register.pug
+++ b/src/views/client/pages/account/register.pug
@@ -53,7 +53,7 @@ block main
 
                             button.btn.btn-primary.btn-block.w-100.mb-3(type="submit") Đăng Ký
 
-                            a(href="/account/password/forgot" class="text-decoration-none") Quên mặt khẩu
+                            a(href="/account/password/forgot" class="text-decoration-none") Quên mật khẩu
 
                         p.text-center.mt-3
                             | Bạn đã có tài khoản?
