--- a/src/views/client/pages/account/login.pug
+++ b/src/views/client/pages/account/login.pug
@@ -43,7 +43,7 @@ block main
 
                             button.btn.btn-primary.btn-block.w-100.mb-3(type="submit") Đăng nhập
 
-                            a(href="/account/password/forgot" class="text-decoration-none") Quên mặt khẩu
+                            a(href="/account/password/forgot" class="text-decoration-none") Quên mật khẩu
 
                         p.text-center.mt-3
                             | Bạn chưa có tài khoản?
