--- a/src/views/client/partials/header.pug
+++ b/src/views/client/partials/header.pug
@@ -48,7 +48,7 @@ mixin header()
                         li.account-menu.d-flex.align-items-center
                             i(class="fa-solid fa-user")
                             if(user)
-                                a(href="/account") Tài khoản
+                                a(href="/account/info") Tài khoản
                                     ul.dropdown-menu
                                         li
                                             a(href="/account/logout") Đăng xuất
