--- a/src/views/admin/pages/roles/permissions.pug
+++ b/src/views/admin/pages/roles/permissions.pug
@@ -136,6 +136,31 @@ block main
                         td(class="text-center")
                             input(type="checkbox" value=item.id)
 
+                //- Cài đặt
+                tr
+                    td(colspan="4")
+                        b Cài đặt
+                tr(data-name="accounts_setting")
+                    td Xem
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="accoutns-setting_create")
+                    td Thêm mới
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="accoutns-setting_edit")                                                                                                                                                                                                                                                                                   
+                    td Chỉnh sửa
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="accoutns-setting_delete")
+                    td Xoá
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+
                 //- Thùng rác
                 tr
                     td(colspan="4")
