--- a/src/views/client/layout/default.pug
+++ b/src/views/client/layout/default.pug
@@ -19,4 +19,9 @@ html
         script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous")
 
+        //Socket.io
+        script(src="/socket.io/socket.io.js")
+        script(src="/js/socket.js")
+
+
         script(src="/js/script.js")
