--- a/src/views/client/layout/default.pug
+++ b/src/views/client/layout/default.pug
@@ -19,11 +19,15 @@ html
         script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous")
 
-        //Socket.io
+        // Socket.io
         script(src="/socket.io/socket.io.js")
         script(src="/js/socket.js")
+        // -Socket.io
 
-        script(src="/js/chat.js")
+        // emoji-picker-element
+        script(type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js")
+        // -emoji-picker-element
 
+        script(type="module" src="/js/chat.js")
 
         script(src="/js/script.js")
