--- a/src/views/client/pages/chat/index.pug
+++ b/src/views/client/pages/chat/index.pug
@@ -18,6 +18,9 @@ block main
                                 .inner-content
                                     | #{chat.content}
 
+                        // Typing Indicator
+                        div(class="inner-list-typing")
+
                     .inner-foot
                         form(
                             class="inner-form"
